Fix footer spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -92,7 +92,7 @@ div:focus,
 #footer a {
   float: left;
   position: relative;
-  width: calc(100% / 6);
+  width: calc(100% / 7);
   height: 100%;
 
   display: block;
